--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
-# Node
+# Node / Next
 node_modules/
 .next/
+out/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env
 .env
-.env.local
+.env.*.local
+!.env.example
+
+# Vercel
+.vercel/
 
 # Python
 .venv/
